--- a/privacyporicy/index.html
+++ b/privacyporicy/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>コンタクト ｜ 株式会社CWファシリティソリューション</title>
-  <meta name="description" content="オフィスに関するお問い合わせ、ご質問などはこちらのフォームよりお問い合わせください。また、フォームがうまく送信出来ない場合などは、メールにてお問い合わせください。">
+  <title>個人情報保護方針 ｜ 株式会社CWファシリティソリューション</title>
+  <meta name="description" content="コクヨグループにおける個人情報保護方針について">
   <meta name="keywords" content="オフィス,コンサルタント,ワークプレイス,はたらき方,オフィス設計,オフィス移転,オフィス変革,ABW">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
@@ -141,7 +141,7 @@
             <div class="heading">上記目的以外の利用について</div>
             <p class="text">・上記以外の目的で個人情報を利用させていただく場合には、ご本人様の同意をいただくものとします。（法令等で認められている場合　を除きます）</p>
             <div class="heading">個人情報の共同利用について(共同利用対象会社のみ)</div>
-            <p class="text">当社は、お預かりした個人情報を次のとおり共同利用致します。<br><a href="">コクヨグループ共同利用について</a></p>
+            <p class="text">当社は、お預かりした個人情報を次のとおり共同利用致します。<br><a href="http://www.kokuyo.co.jp/privacy/kyodoriyo.html" target="_blank">コクヨグループ共同利用について</a></p>
             <div class="heading">クッキー（cookie）の利用について</div>
             <p class="text">・当社では、利用者がコクヨグループのWebサイトを便利に利用していただくために、クッキーと呼ばれる技術を使っています。 クッキーとは、インターネットの効率的な運用と利用状況の効果測定のために、ウェブサイトの提供者が、ブラウザを通じてWebサ　イト訪問者のコンピュータに一時的にデータを書き込んで保存させる仕組みのことです。
               <br>クッキーの利用により、利用者が使用しているコンピュータを識別できますが、利用者個人を特定する情報は含まれておらず識別は　できません。<br>利用者は、ご使用のブラウザの設定により、クッキーの受取を拒否することが可能です。ブラウザの設定方法に関しては，各製造元　にお問合せください。</p>
@@ -152,13 +152,13 @@
           <div class="detail-block__content">
             <p class="text">コクヨグループでは、保有個人データのご本人もしくはその代理人からの開示・変更・利用停止、消去、第三者への提供の停止の請求等の求めには、以下の通り対応させていただきます。</p>
             <div class="heading">1. 「開示等の申し出先」</div>
-            <p class="text">・開示等のご請求は、所定の申請書に本人確認のための必要書類を添付の上、所定の手数料および郵送料相当額の郵便切手を同封して郵　送によりお願い申し上げます。<a href="">保有個人データ開示申請書</a>［PDF版］（こちらからダウンロードできます）<br><a href="">保有個人データ訂正等申請書</a>［PDF版］（こちらからダウンロードできます）</p>
+            <p class="text">・開示等のご請求は、所定の申請書に本人確認のための必要書類を添付の上、所定の手数料および郵送料相当額の郵便切手を同封して郵　送によりお願い申し上げます。<a href="/privacyporicy//pdf/kokuyo_kaijishinseisho.pdf" target="_blank">保有個人データ開示申請書</a>［PDF版］（こちらからダウンロードできます）<br><a href="/privacyporicy/pdf/kokuyo_teiseishinseisho.pdf" target="_blank">保有個人データ訂正等申請書</a>［PDF版］（こちらからダウンロードできます）</p>
             <div class="heading_small">≪本人確認のための書類≫</div>
             <p class="text">・運転免許証、パスポートなどの公的書類のコピー<br>なお、「開示等の請求」をする者が法定代理人もしくは本人が委任した代理人である場合は、前項の書類に加えて、下記の書類を同封　下さい。</p>
             <div class="heading_small">法定代理人の場合</div>
-            <p class="text">・<a href="">法定代理人申告書</a>（こちらからダウンロードできます）１通<br>・法定代理権があることを確認するための書類　１通<br>（戸籍謄本、親権者の場合は扶養家族が記入された保険証のコピーも可）<br>・未成年者又は成年被後見人の法定代理人であることを確認するための書類　１通<br> （法定代理人の運転免許証、パスポートなど公的書類のコピー）</p>
+            <p class="text">・<a href="/privacyporicy/pdf/kokuyo_shinkokusho.pdf" target="_blank">法定代理人申告書</a>（こちらからダウンロードできます）１通<br>・法定代理権があることを確認するための書類　１通<br>（戸籍謄本、親権者の場合は扶養家族が記入された保険証のコピーも可）<br>・未成年者又は成年被後見人の法定代理人であることを確認するための書類　１通<br> （法定代理人の運転免許証、パスポートなど公的書類のコピー）</p>
             <div class="heading_small">委任による代理人の場合</div>
-            <p class="text">・<a href="">委任状</a>（こちらからダウンロードできます）PDFファイル容量：　　１通<br>・本人の印鑑証明書　１通<br><br>詳細は申請書の注意事項をご覧下さい。</p>
+            <p class="text">・<a href="/privacyporicy/pdf/kokuyo_ininjou.pdf" target="_blank">委任状</a>（こちらからダウンロードできます）PDFファイル容量：　　１通<br>・本人の印鑑証明書　１通<br><br>詳細は申請書の注意事項をご覧下さい。</p>
             <div class="heading">2. 「開示等の求め」の手数料及びその徴収方法</div>
             <p class="text">開示請求１件につき、1000円の手数料が必要です。<br>（同額の郵便切手を請求書類に同封してください）<br>手数料が不足していた場合、および手数料が同封されていなかった場合は、その旨ご連絡申し上げますが、所定の期間内にお支払いがない場合は、開示の求めがなかったものとして対応させて頂きます。詳細は申請書の注意事項をご覧下さい。</p>
             <div class="heading">3. 「開示等の求め」に対する回答方法</div>
