--- a/service/index.html
+++ b/service/index.html
@@ -140,7 +140,7 @@
               </ul>
             </div>
             <div class="consul-underBlock_lists__items">
-              <div class="heading">最適化シナリオの<br>策定</div>
+              <div class="heading">最適化<br class="is-st">シナリオの<br class="is-tp">策定</div>
               <ul class="list">
                 <li>事業／機能別の立地整合評価</li>
                 <li>組織／施設リレーション評価</li>
@@ -148,7 +148,7 @@
               </ul>
             </div>
             <div class="consul-underBlock_lists__items">
-              <div class="heading">ビル選定サポート</div>
+              <div class="heading">ビル選定<br class="is_sp">サポート</div>
               <ul class="list">
                 <li>選定基準策定</li>
                 <li>候補ビルの選定／比較</li>
@@ -164,7 +164,7 @@
               </ul>
             </div>
             <div class="consul-underBlock_lists__items">
-              <div class="heading">オフィス概略計画</div>
+              <div class="heading">オフィス<br class="is-sp">概略計画</div>
               <ul class="list">
                 <li>基本設計要件の定義</li>
                 <li>組織／機能ブロッキング</li>
@@ -172,7 +172,7 @@
               </ul>
             </div>
             <div class="consul-underBlock_lists__items">
-              <div class="heading">コスト<br>シミュレーション</div>
+              <div class="heading">コスト<br>シミュ<br class="is-sp">レーション</div>
               <ul class="list">
                 <li>賃料シミュレーション</li>
                 <li>移転／構築費用算定</li>
@@ -225,7 +225,8 @@
         </div>
         <div class="consul-underBlock">
           <p class="consul-underBlock__text">
-            オフィスコンサルティング／オフィス設計では、各企業のビジョン／方針に沿った個人・チームの働き方を検討し、新しい働き方へのシフトを後押しするオフィスを計画します。<br> そして、働きやすさやコミュニケーションのしやすさに加えて、効率性や継続的な運用の視点からの
+            オフィスコンサルティング／オフィス設計では、各企業のビジョン／方針に沿った個人・チームの働き方を検討し、<br>
+            新しい働き方へのシフトを後押しするオフィスを計画します。<br> そして、働きやすさやコミュニケーションのしやすさに加えて、効率性や継続的な運用の視点からの
             <br> プランニングを行い、利便性を高めるＩＣＴツールの検討や社員の健康や
             <br> モチベーションに配慮したデザインなど、総合的なオフィス設計を行います。
           </p>
@@ -389,6 +390,7 @@
         <h2 class="map__title c-sectionheading c-sectionheading__jp"><span>サービスマップ</span></h2>
         <div class="map-block1">
           <img src="../images/service/service_servicemap_pc.jpg" class="is-pc">
+          <img src="../images/service/service_servicemap_pc.jpg" class="is-tb">
         </div>
         <div class="map-block2">
           <img src="../images/service/service_servicemap_sp.jpg" class="is-sp">
