--- a/casestudy/07/index.html
+++ b/casestudy/07/index.html
@@ -15,8 +15,8 @@
 <script src="/js/script.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-<link rel="stylesheet" href="http://dev1.preview-site.click/style.css">
-<link rel="stylesheet" href="http://dev1.preview-site.click/magnific-popup.css">
+<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="/magnific-popup.css">
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
