--- a/concept/index.html
+++ b/concept/index.html
@@ -102,7 +102,7 @@
             <div class="textbox">
               <div class="title">
                 <div class="num">01</div>
-                <div class="text">企業としての方向性と<br class="is-st">ワーカーの“はたらき方”を<br class="is-st">フィットさせる</div>
+                <div class="text">企業としての方向性と<br class="is-st">ワーカーの<br class="is-pc">“はたらき方”を<br class="is-st">フィットさせる</div>
               </div>
               <div class="lead">企業としての本質的な課題の解決に向けて、個人やチームのこれからのはたらき方をクライアントと一緒に考えていきます。空間としての計画・デザインに先行して、企業として目指すはたらき方のポイントを明確にして、各ワーカーの具体的な行動につなげていくコンセプトと計画づくりを行います。</div>
             </div>
