--- a/index.html
+++ b/index.html
@@ -50,13 +50,16 @@
   
   <main id="index">
 
-    <!-- hero -->
     <section>
       <div class="hero">
-        <div class="hero-copy is-red" id="heroCopy">
+        <div class="hero-copysp is-st">
+          <span class="en">FOR WORKSTYLE SHIFT</span>
+          <span class="jp">働き方を変え、可能性を広げるワークプレイス</span>
+        </div>
+        <div data-copy="1" class="hero-copy is-red is-pc" id="heroCopy">
           <div class="hero-copy_text is-red">
-            <span class="en">FOR WORKSTYLE SHIFT.</span>
-            <span class="jp">これからの“はたらき方”を考えたオフィスへ、CWFができること。</span>
+            <span class="en">FOR WORKSTYLE SHIFT</span>
+            <span class="jp">働き方を変え、可能性を広げるワークプレイス</span>
           </div>
           <div class="hero-copy_text">
             <span class="strong">ACROSS</span>
@@ -71,12 +74,10 @@
             <span class="small">POSSIBILITIES</span>
           </div>
         </div>
-        <video class="hero-video" id="heroVideo" src="video/hero.mp4" autoplay loop muted></video>
-      </div>
+        <video class="hero-video is-pc" id="heroVideo" src="video/hero.mp4" autoplay loop muted></video>
+      </div><!-- /.hero -->
     </section>
-    <!-- /hero -->
 
-    <!-- concept -->
     <section>
       <div class="concept">
         <h2 class="concept-heading c-sectionheading"><span>CONCEPT</span></h2>
@@ -102,11 +103,9 @@
           </ul>
         </div>
         <div class="concept-btn c-morebtn"><a href="">READ MORE</a></div>
-      </div>
+      </div><!-- /.concept -->
     </section>
-    <!-- /concept -->
 
-    <!-- casestudy -->
     <section>
       <div class="casestudy">
         <div class="casestudy-block">
@@ -118,34 +117,40 @@
           <div class="casestudy-slider">
             <ul id="casestudySlider" class="casestudy-slider__items">
               <li data-num="1" class="casestudy-slider__item">
-                <figure class="image"><img src="images/index/casestudySlider_pic_01.jpg" alt="ＳＰＡブランド会社"></figure>
-                <div class="name">ＳＰＡブランド会社</div>
-                <div class="text">執務エリアは、統合・改編などの組織変更に柔軟に対応するために、ユニバーサルプランを採用。来客エリアは、 “ファッションを通じて、お客様に「ワクワク」を提供する”という企業観を来訪者と共…>></div>
+                <a href="/casestudy/01/">
+                  <figure class="image"><img src="images/index/casestudySlider_pic_01.jpg" alt="ＳＰＡブランド会社"></figure>
+                  <div class="name">ＳＰＡブランド会社</div>
+                  <div class="text">執務エリアは、統合・改編などの組織変更に柔軟に対応するために、ユニバーサルプランを採用。来客エリアは、 “ファッションを通じて、お客様に「ワクワク」を提供する”という企業観を来訪者と共…>></div>
+                </a>
               </li>
               <li data-num="2" class="casestudy-slider__item">
-                <figure class="image"><img src="images/index/casestudySlider_pic_02.jpg" alt="事業創造型総合商社"></figure>
-                <div class="name">事業創造型総合商社</div>
-                <div class="text">移転により16フロアに分散していたオフィスを1.25フロアに集約し、組織間のコミュニケーションロスを改善。執務エリアは、効率を重視したレイアウトプラン。イベント開催や組織を越えたコ…>></div>
+                <a href="/casestudy/02/">
+                  <figure class="image"><img src="images/index/casestudySlider_pic_02.jpg" alt="事業創造型総合商社"></figure>
+                  <div class="name">事業創造型総合商社</div>
+                  <div class="text">移転により16フロアに分散していたオフィスを1.25フロアに集約し、組織間のコミュニケーションロスを改善。執務エリアは、効率を重視したレイアウトプラン。イベント開催や組織を越えたコ…>></div>
+                </a>
               </li>
               <li data-num="3" class="casestudy-slider__item">
-                <figure class="image"><img src="images/index/casestudySlider_pic_03.jpg" alt="オフィスレントサービスの実現"></figure>
-                <div class="name">オフィスレントサービスの実現</div>
-                <div class="text">ＣＷＦの「拠点総合評価サービス」は、賃料、立地、ビルスペック、スペース効率の４つの観点から総合的に戦略の構築が可能になります。</div>
+                <a href="/casestudy/03/">
+                  <figure class="image"><img src="images/index/casestudySlider_pic_03.jpg" alt="オフィスレントサービスの実現"></figure>
+                  <div class="name">オフィスレントサービスの実現</div>
+                  <div class="text">ＣＷＦの「拠点総合評価サービス」は、賃料、立地、ビルスペック、スペース効率の４つの観点から総合的に戦略の構築が可能になります。</div>
+                </a>
               </li>
               <li data-num="4" class="casestudy-slider__item">
-                <figure class="image"><img src="images/index/casestudySlider_pic_04.jpg" alt="#"></figure>
-                <div class="name">#</div>
-                <div class="text">ＣＷＦの「拠点総合評価サービス」は、賃料、立地、ビルスペック、スペース効率の４つの観点から総合的に戦略の構築が可能になります。賃料、立地、ビルスペック、スペース効率の４つの観 …>></div>
+                <a href="/casestudy/20/">
+                  <figure class="image"><img src="images/index/casestudySlider_pic_04.jpg" alt="#"></figure>
+                  <div class="name">ITコンサルティング会社</div>
+                  <div class="text">ＣＷＦの「拠点総合評価サービス」は、賃料、立地、ビルスペック、スペース効率の４つの観点から総合的に戦略の構築が可能になります。賃料、立地、ビルスペック、スペース効率の４つの観 …>></div>
+                </a>
               </li>
             </ul>
           </div>
-          <div class="casestudy-btn c-morebtn"><a href="">READ MORE</a></div>
+          <div class="casestudy-btn c-morebtn"><a href="/casestudy/">READ MORE</a></div>
         </div>
-      </div>
+      </div><!-- /.casestudy -->
     </section>
-    <!-- /casestudy -->
 
-    <!-- service -->
     <section>
       <div class="service">
         <h2 class="service-heading c-sectionheading"><span>SERVICE</span></h2>
@@ -166,7 +171,7 @@
               <li>・コストシミュレーション</li>
             </ul>
             <figure class="image"><img src="images/index/service_pic_01.jpg" alt="拠点最適化コンサルティング"></figure>
-            <div class="btn c-morebtn"><a href="">READ MORE</a></div>
+            <div class="btn c-morebtn"><a href="/service/#a1">READ MORE</a></div>
           </div>
           <div class="service-content__item">
             <div class="title">オフィスコンサルティング/オフィス設計</div>
@@ -180,7 +185,7 @@
               <li>・運用マニュアル策定</li>
             </ul>
             <figure class="image"><img src="images/index/service_pic_02.jpg" alt="オフィスコンサルティング/オフィス設計"></figure>
-            <div class="btn c-morebtn"><a href="">READ MORE</a></div>
+            <div class="btn c-morebtn"><a href="/service/#a2">READ MORE</a></div>
           </div>
           <div class="service-content__item">
             <div class="title">プロジェクトマネジメント</div>
@@ -194,14 +199,12 @@
               <li>・工事監理／移転監理</li>
             </ul>
             <figure class="image"><img src="images/index/service_pic_03.jpg" alt="プロジェクトマネジメント"></figure>
-            <div class="btn c-morebtn"><a href="">READ MORE</a></div>
+            <div class="btn c-morebtn"><a href="/service/#a3">READ MORE</a></div>
           </div>
         </div>
-      </div>
+      </div><!-- /.service -->
     </section>
-    <!-- /service -->
 
-    <!-- company -->
     <section>
       <div class="company">
         <h2 class="company-heading c-sectionheading"><span>COMPANY</span></h2>
@@ -218,9 +221,8 @@
           <dd class="company-list_description">堀田 巌</dd>
         </dl>
         <div class="company-btn c-morebtn"><a href="">READ MORE</a></div>
-      </div>
+      </div><!-- /.company -->
     </section>
-    <!-- /company -->
     
   </main>
   
