かみの修正

--- a/inc/_header.html
+++ b/inc/_header.html
@@ -1,10 +1,10 @@
 <header id="header">
   <div class="sitename">
-    <img src="/images/layout/header_logo.svg" alt="CW Facility Solution Inc.">
+    <a href="/"><img src="/images/layout/header_logo.svg" alt="CW Facility Solution Inc."></a>
   </div>
   <nav class="gnav">
     <ul class="list">
-      <li class="item is-active">
+      <li class="item">
         <a href="/">
           <span class="en">HOME</span>
           <span class="jp">ホーム</span>
