--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <li class="concept-list__item">03.専門家としてクライアントの目的の実現に寄り添うプロジェクトサポート</li>
           </ul>
         </div>
-        <div class="concept-btn c-morebtn"><a href="">READ MORE</a></div>
+        <div class="concept-btn c-morebtn"><a href="/concept/">READ MORE</a></div>
       </div><!-- /.concept -->
     </section>
 
@@ -220,7 +220,7 @@
           <dt class="company-list_term">代表取締役社長</dt>
           <dd class="company-list_description">堀田 巌</dd>
         </dl>
-        <div class="company-btn c-morebtn"><a href="">READ MORE</a></div>
+        <div class="company-btn c-morebtn"><a href="/company/">READ MORE</a></div>
       </div><!-- /.company -->
     </section>
     
