--- a/service/index.html
+++ b/service/index.html
@@ -73,18 +73,20 @@
     </section>
     <!-- intro -->
 
-    <!-- anker -->
+    <!-- anchor -->
     <section>
-      <div class="anker">
-        <ul class="anker-lists">
-          <li class="anker-lists_item"><a href="#a1">拠点最適化コンサルティング</a></li>
-          <li class="anker-lists_item"><a href="#a2">オフィスコンサルティング/オフィス設計</a></li>
-          <li class="anker-lists_item"><a href="#a3">プロジェクトマネジメント</a></li>
-          <li class="anker-lists_item"><a href="#a4">サービスマップ</a></li>
-        </ul>
+      <div class="anchor" id="anchor">
+        <div class="anchor-inner">
+          <ul class="anchor-lists">
+            <li class="anchor-lists_item"><a href="#a1">拠点最適化コンサルティング</a></li>
+            <li class="anchor-lists_item"><a href="#a2">オフィスコンサルティング/オフィス設計</a></li>
+            <li class="anchor-lists_item"><a href="#a3">プロジェクトマネジメント</a></li>
+            <li class="anchor-lists_item"><a href="#a4">サービスマップ</a></li>
+          </ul>
+        </div>
       </div>
     </section>
-    <!-- anker -->
+    <!-- anchor -->
 
     <!-- consul -->
     <section>
