--- a/index.html
+++ b/index.html
@@ -118,30 +118,44 @@
             <ul id="casestudySlider" class="casestudy-slider__items">
               <li data-num="1" class="casestudy-slider__item">
                 <a href="/casestudy/01/">
-                  <figure class="image"><img src="images/index/casestudySlider_pic_01.jpg" alt="ＳＰＡブランド会社"></figure>
+                  <figure class="image"><img src="images/casestudy/Casestudy_project_1.jpg" alt="ＳＰＡブランド会社"></figure>
                   <div class="name">ＳＰＡブランド会社</div>
-                  <div class="text">執務エリアは、統合・改編などの組織変更に柔軟に対応するために、ユニバーサルプランを採用。来客エリアは、 “ファッションを通じて、お客様に「ワクワク」を提供する”という企業観を来訪者と共…>></div>
+                  <div class="text"><span>規模</span>3,500坪、1,200名</div>
                 </a>
               </li>
               <li data-num="2" class="casestudy-slider__item">
                 <a href="/casestudy/02/">
-                  <figure class="image"><img src="images/index/casestudySlider_pic_02.jpg" alt="事業創造型総合商社"></figure>
+                  <figure class="image"><img src="images/casestudy/Casestudy_project_2.jpg" alt="事業創造型総合商社"></figure>
                   <div class="name">事業創造型総合商社</div>
-                  <div class="text">移転により16フロアに分散していたオフィスを1.25フロアに集約し、組織間のコミュニケーションロスを改善。執務エリアは、効率を重視したレイアウトプラン。イベント開催や組織を越えたコ…>></div>
+                  <div class="text"><span>規模</span>1,000坪、300名</div>
                 </a>
               </li>
               <li data-num="3" class="casestudy-slider__item">
                 <a href="/casestudy/03/">
-                  <figure class="image"><img src="images/index/casestudySlider_pic_03.jpg" alt="オフィスレントサービスの実現"></figure>
-                  <div class="name">オフィスレントサービスの実現</div>
-                  <div class="text">ＣＷＦの「拠点総合評価サービス」は、賃料、立地、ビルスペック、スペース効率の４つの観点から総合的に戦略の構築が可能になります。</div>
+                  <figure class="image"><img src="images/casestudy/Casestudy_project_3.jpg" alt="オフィスレントサービスの実現"></figure>
+                  <div class="name">情報通信サービス会社</div>
+                  <div class="text"><span>規模</span>13,000坪、5,000名</div>
                 </a>
               </li>
               <li data-num="4" class="casestudy-slider__item">
-                <a href="/casestudy/20/">
-                  <figure class="image"><img src="images/index/casestudySlider_pic_04.jpg" alt="#"></figure>
-                  <div class="name">ITコンサルティング会社</div>
-                  <div class="text">ＣＷＦの「拠点総合評価サービス」は、賃料、立地、ビルスペック、スペース効率の４つの観点から総合的に戦略の構築が可能になります。賃料、立地、ビルスペック、スペース効率の４つの観 …>></div>
+                <a href="/casestudy/04/">
+                  <figure class="image"><img src="images/casestudy/Casestudy_project_4.jpg" alt="#"></figure>
+                  <div class="name">電気機器製造会社 東京本社</div>
+                  <div class="text"><span>規模</span>2,500坪、550名</div>
+                </a>
+              </li>
+              <li data-num="5" class="casestudy-slider__item">
+                <a href="/casestudy/05/">
+                  <figure class="image"><img src="images/casestudy/Casestudy_project_5.jpg" alt="#"></figure>
+                  <div class="name">グローバル監査法人</div>
+                  <div class="text"><span>規模</span>2,200坪、400名</div>
+                </a>
+              </li>
+              <li data-num="6" class="casestudy-slider__item">
+                <a href="/casestudy/06/">
+                  <figure class="image"><img src="images/casestudy/Casestudy_project_6.jpg" alt="#"></figure>
+                  <div class="name">国内監査法人</div>
+                  <div class="text"><span>規模</span>1,000坪、1,430名</div>
                 </a>
               </li>
             </ul>
