--- a/casestudy/index.html
+++ b/casestudy/index.html
@@ -162,7 +162,7 @@
               <a href="../casestudy/14/">
                 <div class="thumb"><img src="../images/casestudy/Casestudy_project_14.jpg"></div>
                 <div class="heading">事務機器販売会社</div>
-                <div class="text"><span>規模</span></div>
+                <div class="text"><span>規模</span>750坪、340名</div>
               </a>
             </li>
             <li class="project-lists__items">
