--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#666666">
   <script src="/js/jquery-1.11.1.js"></script>
   <script src="/js/bxslider.js"></script>
+  <script src="/js/jquery.inview.js"></script>
   <script src="/js/jquery.magnific-popup.min.js"></script>
   <script src="/js/script.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
@@ -239,6 +240,15 @@
     </section>
     
   </main>
+  <script>
+    $('#index section').on('inview', function(event, isInView, visiblePartX, visiblePartY) {
+      if (isInView) {
+        $(this).addClass('is-inview');
+      } else {
+        //      $(this).removeClass('inview');
+      }
+    });
+  </script>
   
   <?php require("inc/_footer.html");?>
 
